styles/style.css
/* ... */
#dashboard .content .item .button:hover {
  filter: brightness(0.75);
}

#dashboard .content .item img {
  width: 22rem;
  margin: 0 auto;
}

/* === ABOUT === */

section#about {
  background-color: var(--white);
}

#about .content {
  gap: 2rem;
}

#about .content .item.intro {
  gap: 0.25rem;
}

#about .content .item.link {
  gap: 1rem;
}

#about .content .item h3 {
  font-size: 1.5rem;
  font-weight: 500;
  color: var(--primary);
}

#about .content .item p {
  font-size: 1rem;
  font-weight: 400;
}

.social-icon {
  display: flex;
  align-items: center;
  flex-wrap: wrap;
  gap: 0.5rem;
}

.social-icon a {
  width: 2.5rem;
  height: 2.5rem;
  display: flex;
  justify-content: center;
  align-items: center;
  border: 2px solid var(--dark);
  border-radius: 50%;
  transition: all 0.3s ease;
}

.social-icon a:hover {
  border: 2px solid var(--primary);
  background-color: var(--primary);
}

.social-icon a svg {
  fill: var(--dark);
}

.social-icon a:hover svg {
  fill: var(--white);
}

/* === EXPERIENCE === */

section#experience {
  background-color: var(--light);
}

.experience {
  display: grid;
  grid-template-areas:
    "pointer company"
    "pointer desc";
}

.experience .pointer {
  grid-area: pointer;
  display: flex;
  flex-direction: column;
  align-items: center;
  padding-right: 0.75rem;
}

.experience .pointer .ellipse-border {
  padding: 0.5rem;
  border-radius: 50%;
  border: 1px dashed var(--dark);
  width: fit-content;
}

.experience .pointer .ellipse {
  width: 1rem;
  height: 1rem;
  border-radius: 50%;
  background-color: var(--primary);
}

.experience .pointer .line {
  width: 0;
  height: 100%;
  border-right: 1px dashed var(--dark);
}

.experience .company {
  grid-area: company;
  display: flex;
  flex-direction: column;
  gap: 0.125rem;
}

.experience .company h3 {
  font-size: 1.25rem;
  font-weight: 600;
}

.experience .company p {
  font-size: 1rem;
  font-weight: 400;
}

.experience .desc {
  grid-area: desc;
  padding-top: 0.75rem;
  padding-bottom: 2rem;
}

.experience .desc h4 {
  font-size: 1.125rem;
  font-weight: 500;
}

.experience .desc p {
  font-size: 0.875rem;
  font-weight: 300;
}

/* === SKILLS === */

section#skills {
  background-color: var(--white);
}

.skills-container {
  display: flex;
  justify-content: center;
}

.skills {
  display: grid;
  grid-template-columns: repeat(4, 1fr);
  gap: 1.5rem;
}

.skills .skill a {
  display: block;
  width: fit-content;
  margin: 0 auto;
}

.skills .skill svg {
  height: 3.5rem;
  filter: grayscale(1);
  transition: all 0.3s;
}

.skills .skill a:hover svg {
  filter: grayscale(0);
}

/* === PROJECTS === */

section#projects {
  background-color: var(--light);
}

.projects-container {
  display: flex;
  justify-content: center;
}

.projects {
  display: grid;
  grid-template-columns: repeat(1, 1fr);
  gap: 1rem;
}

.project {
  width: 26rem;
}

.project .picture {
  height: 12rem;
  /* background-color: var(--dark); */
  border-top: 1px solid var(--gray);
  border-left: 1px solid var(--gray);
  border-right: 1px solid var(--gray);
  border-radius: 1.5rem 1.5rem 0 0;
  overflow: hidden;
}

.project .picture img {
  width: 100%;
  height: 100%;
  object-fit: cover;
}

.project .bottom {
  background-color: var(--white);
  border-left: 1px solid var(--gray);
  border-right: 1px solid var(--gray);
  border-bottom: 1px solid var(--gray);
  border-radius: 0 0 1.5rem 1.5rem;
  display: flex;
  flex-direction: column;
  justify-content: space-between;
}

.project .desc {
  padding: 1rem;
  display: flex;
  flex-direction: column;
  gap: 0.25rem;
}

.project .desc h4 {
  font-size: 1.125rem;
  font-weight: 500;
}

.project .desc p {
  font-size: 0.875rem;
  font-weight: 300;
  color: var(--darkgray);
}

.project .desc p span.bold {
  font-weight: 500;
}

.project .nav {
  padding: 1rem;
  display: flex;
  justify-content: space-between;
  align-items: center;
  border-top: 1px solid var(--gray);
}

.project .nav .project-link {
  display: flex;
  justify-content: center;
  align-items: center;
  gap: 0.5rem;
}

.project .nav .project-link a {
  width: 5.5rem;
  padding: 0.5rem;
  border-radius: 0.75rem;
  border: 1px solid var(--gray);
  background-color: var(--white);
  display: flex;
  justify-content: center;
  align-items: center;
  gap: 0.25rem;
  font-size: 0.875rem;
  font-weight: 500;
  color: var(--dark);
  transition: all 0.3s ease;
}

.project .nav .project-link a.repo {
  background-color: var(--dark);
  color: var(--white);
}

.project .nav .project-link a:hover {
  filter: brightness(0.9);
}

.project .nav .project-link a.disabled {
  filter: opacity(0.75);
}

.project .nav .category {
  display: flex;
  align-items: center;
  gap: 0.5rem;
}

.project .nav .category p {
  font-size: 0.875rem;
  font-weight: 400;
}

/* === FOOTER === */

.footer {
  background-color: var(--dark);
}

.footer .container {
  padding-top: 4.5rem;
  padding-bottom: 5.5rem;
  display: flex;
  flex-direction: column;
  gap: 3rem;
}

.footer .container .content {
  display: flex;
  flex-wrap: wrap;
  gap: 2rem;
}

.farewell {
  width: 100%;
  display: flex;
  flex-direction: column;
  gap: 1rem;
}

.farewell h3 {
  font-size: 1.5rem;
  font-weight: 600;
  color: var(--light);
}

.farewell p {
  font-size: 0.875rem;
  font-weight: 300;
  color: var(--light);
}

.footer .farewell .social-icon a {
  border: 2px solid var(--light);
}

.footer .farewell .social-icon a:hover {
  border: 2px solid var(--primary);
}

.footer .farewell .social-icon a svg {
  fill: var(--light);
}

.footer .farewell .social-icon a:hover svg {
  fill: var(--white);
}

.links-contact {
  width: 100%;
  display: flex;
  flex-direction: column;
  gap: 1.5rem;
}

.links-contact .links,
.links-contact .contact {
  display: flex;
  flex-direction: column;
  gap: 0.5rem;
}

.links-contact .links h4,
.links-contact .contact h4 {
  font-size: 1.25rem;
  font-weight: 500;
  color: var(--light);
}

.links-contact .links ul li {
  margin-bottom: 0.25rem;
}
/* ... */

